fix olaf dark mode accessibility

--- a/olafs/olafs.css
+++ b/olafs/olafs.css
@@ -18,6 +18,9 @@ main a {
 
 .olaf-description .olaf-logo {
     height: 8em;
+    background: radial-gradient(ellipse, rgba(255,255,255,0.7) 0%, rgba(255,255,255,0) 70%);
+    padding: 100px;
+    margin: -70px;
 }
 
 .container {
@@ -56,7 +59,7 @@ main a {
 }
 
 .note {
-  color: grey;
+  color: var(--secondary-text);
   font-size: 0.8em;
 }
 
